--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
-    "test": "echo \"Tests Complete\""
+    "test": "echo \"Tests Complete\"",
+    "nodemon": "nodemon -e js,html,css --watch ./src --watch ./client/"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,8 @@
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2"
+  },
+  "dependencies": {
+    "nodemon": "^1.19.3"
   }
 }
